# Amethyst-Launcher

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  1.yml  README.md  README.zh.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vue.config.js
.VSCodeCounter/2023-05-01_20-55-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report.zh.md  feature_request.yml
.github/workflows/: audit.yml  build.yml  codeql.yml  deny.yml  lint-js.yml  lint-rust.yml  test-rust.yml
core/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
core/capabilities/: main.json
core/icons/: icon.icns
core/src/: account.rs  download.rs  folder.rs  java_exec.rs  launcher_profiles.json  main.rs  platform.rs  version.rs
core/src/config/: account.rs  download.rs  instance.rs  launch.rs  mod.rs
core/src/game_data/: mod.rs  resourcepack.rs  shaderpacks.rs
core/src/game_data/mods/: fabric.rs  forge.rs  mod.rs  quilt.rs
core/src/game_data/saves/: gamerule.rs  level.rs  mod.rs  player.rs
core/src/install/: mod.rs
core/src/install/fabric/: install.rs  mod.rs
core/src/install/forge/: install.rs  mod.rs  version_list.rs
core/src/install/forge/old/: install.rs  mod.rs
core/src/install/neoforged/: mod.rs
core/src/install/optifine/: install.rs  mod.rs  version_list.rs
core/src/install/quilt/: mod.rs
core/src/install/vanilla/: mod.rs
core/src/instance/: mod.rs
core/src/launch/: argument.rs  arguments.rs  check.rs  complete.rs  mod.rs  options.rs
core/src/utils/: mod.rs  nbt.rs  unzip.rs
public/: articles.json
src/: Main.vue  avatar.ts  bootstrap.ts  config.ts  main.ts  shims-vue.d.ts  theme.ts
src-tauri/: .gitignore  Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: download.rs  folder.rs  main.rs  version.rs
src-tauri/src/config/: instance.rs  mod.rs
src-tauri/src/core/: folder.rs  launcher_profile.json  mod.rs  version.rs
src-tauri/src/download_task/: mod.rs
src-tauri/src/game_data/: mod.rs
src-tauri/src/game_data/mods/: fabric.rs  forge.rs  mod.rs  quilt.rs
src-tauri/src/game_data/saves/: gamerule.rs  level.rs  mod.rs  player.rs
src-tauri/src/install/: mod.rs
src-tauri/src/install/fabric/: install.rs  mod.rs  version_list.rs
src-tauri/src/install/forge/: install.rs  install_profile.rs  legacy_install.rs  mod.rs  new_install.rs  version_list.rs
src-tauri/src/install/forge/old/: install_profile.rs  legacy_install.rs  new_install.rs  version_list.rs
src-tauri/src/install/optifine/: install.rs  mod.rs  version_list.rs
src-tauri/src/install/quilt/: install.rs  mod.rs  version_list.rs
src-tauri/src/install/vanilla/: mod.rs
src-tauri/src/instance/: mod.rs
src-tauri/src/launch/: mod.rs  options.rs
src-tauri/src/utils/: mod.rs  nbt.rs  unzip.rs
src/assets/styles/: catppuccin-theme.css  controller.css  dark-theme.css  default.css  high-contrast-dark.css  icons.css  light-theme.css  main.css  transitions.css
src/components/: AccountManager.vue  Accounts.vue  AssetsManager.vue  Button.vue  ButtonBar.vue  Card.vue  CardButton.vue  CardLink.vue  Dialog.vue  DialogButton.vue  Expander.vue  IconButton.vue  IconSelect.vue  InstanceInfo.vue  InstanceList.vue  InstanceManager.vue  Instances.vue  ItemLoadingIcon.vue  ListItem.vue  ProgressBar.vue  SearchBar.vue  Select.vue  SelectBar.vue  SelectOption.vue  SettingGroup.vue  SettingItem.vue  SidebarItem.vue  SliderBar.vue  Tabs.vue  Tag.vue  TextInputBar.vue  TextInputBox.vue  TipBar.vue  ToggleSwitch.vue  ToggleSwitchBar.vue
src/components/controllers/: Button.vue  Select.vue  SelectOption.vue  SliderBar.vue  TextInputBox.vue  ToggleSwitch.vue
src/i18n/: en.ts  en_us.ts  ru_ru.ts  zh_cn.ts
src/pages/: Community.vue  Game copy.vue  Game.vue  Home.vue  Market.vue  NewInstance.vue  Newspaper.vue  Settings copy.vue  Settings.vue
src/pages/dialogs/: AccountManager.vue  AddAccount.vue  ConfirmDeleteInstance.vue  CreateInstance.vue  DownloadSourcesManager.vue  FabricChoose.vue  ForgeChoose.vue  InstallProgress.vue  InstanceManager.vue  LogViewer.vue  MinecraftChoose.vue  Mods.vue  QuiltChoose.vue  Resourcepacks.vue  Shaderpacks.vue  UpdateReminder.vue  Worlds.vue
src/pages/dialogs/account/: Add.vue  View.vue
src/pages/dialogs/create/: FabricChoose.vue  ForgeChoose.vue  MinecraftChoose.vue  NeoforgedChoose.vue  QuiltChoose.vue
src/pages/dialogs/instance/: Create.vue  Group.vue  View.vue
src/pages/game/: AccountManager.vue  AssetsManager.vue  Info.vue  InstallProgress.vue  InstanceCard.vue  InstanceDetails.vue  InstanceList.vue  Mods.vue  Packs.vue  Playtime.vue  Settings.vue  Worlds.vue
src/pages/newInstance/: CreateNew.vue
src/pages/settings/: About.vue  Accessibility.vue  Advance.vue  Appearance.vue  Download.vue  Extend.vue  Game.vue  General.vue
src/storage/: configs.ts  state.ts
src/store/: config.ts  instance.ts  time.ts
src/types/: instance.ts
src/utils/: ConfigLoader.ts
