[package]
name = "amethyst-launcher"
version = "0.0.0"
description = "A Minecraft Launcher"
authors = ["Broken Deer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["unstable"] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
anyhow = "1.0"
toml = "0.8"
once_cell = "1.7"
base64 = "0.22.1"
regex = { version = "1.11.0", default-features = false, features = ["std"] }
zip = "2.1.6"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
hematite-nbt = "0.5.2"
tauri-plugin-http = "2.0.0-rc.0"
rayon = "1.10.0"
sha1_smol = "1.0.1"
log = "0.4.22"
env_logger = "0.11.5"
num_cpus = "1.16.0"
sys-locale = "0.3.1"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-clipboard-manager = "2.0.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort"   # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.0.0-rc"
