[package]
name = "amethyst-launcher"
version = "0.1.0"
description = "A Minecraft launcher with magic"
authors = ["Broken Deer"]
license = ""
repository = ""
default-run = "amethyst-launcher"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = ["api-all"] }
aml_core = { git="https://github.com/Broken-Deer/Amethyst-Launcher-Core" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
anyhow = "1.0"
toml = "0.7.6"
once_cell = "1.7"
notify = "4.0.12"
base64 = "0.21.2"
reqwest = { version = "0.11", features = ["json"] }
dirs = "3.0"
log4rs = "1.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
